// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatMetadata should render Metadata component passing the formatted metadata 1`] = `
<Metadata
  compact={true}
  forceLabels={false}
  metadata={
    Array [
      Object {
        "formated": "metadata",
      },
    ]
  }
  templates={Array []}
  thesauris={Array []}
/>
`;

exports[`FormatMetadata should unshift additional metadata if passed 1`] = `
<Metadata
  compact={true}
  forceLabels={false}
  metadata={
    Array [
      Object {
        "more": "data",
      },
      Object {
        "and": "more",
      },
      Object {
        "formated": "metadata",
      },
    ]
  }
  templates={Array []}
  thesauris={Array []}
/>
`;
